--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ configobj==5.0.6
 constantly==15.1.0
 cryptography==2.1.4
 DateTime==4.3
-discord==1.0.1
+discord
 discord.py==1.4.1
 distro-info===0.18ubuntu0.18.04.1
 httplib2==0.9.2
